--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,9 @@
 <header class="site-header">
 
   <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-    {%- if titles_size > 0 -%}
+    {%- if site.header_pages -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
@@ -18,10 +15,23 @@
         </label>
 
         <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+          {%- for item in site.header_pages -%}
+            {%- if item.children -%}
+              <div class="dropdown">
+                <a class="page-link dropdown-toggle" href="{{ item.url | relative_url }}">
+                  {{ item.title | escape }}
+                  <span class="dropdown-arrow">▼</span>
+                </a>
+                <div class="dropdown-menu">
+                  {%- for child in item.children -%}
+                    {%- assign child_page = site.pages | where: "path", child.url | first -%}
+                    <a class="dropdown-item" href="{{ child.url | relative_url }}">{{ child.title | escape }}</a>
+                  {%- endfor -%}
+                </div>
+              </div>
+            {%- else -%}
+              {%- assign my_page = site.pages | where: "path", item.url | first -%}
+              <a class="page-link" href="{{ item.url | relative_url }}">{{ item.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
