--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,240 +1,7 @@
 /**
- * Site header
+ * Site header - Now using Tailwind CSS classes
+ * Custom styles removed as they're handled by Tailwind classes in header.html
  */
-.site-header {
-  border-top: 5px solid $border-color-03;
-  border-bottom: 1px solid $border-color-01;
-  min-height: $spacing-unit * 1.865;
-  line-height: $base-line-height * $base-font-size * 2.25;
-  padding: 0;
-  background-color: $background-color;
-
-  // Positioning context for the mobile navigation icon
-  position: relative;
-}
-
-.wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 60px;
-}
-
-.site-title {
-  @include relative-font-size(1.625);
-  font-weight: 600;
-  letter-spacing: -1px;
-  margin: 0;
-  padding: 0;
-  color: $site-title-color;
-  text-decoration: none;
-
-  @include media-query($on-palm) {
-    padding-right: 45px;
-  }
-
-  &,
-  &:visited {
-    color: $site-title-color;
-  }
-}
-
-.site-nav {
-  position: relative;
-  display: flex;
-  align-items: center;
-  background-color: transparent;
-  border: none;
-  text-align: right;
-
-  .nav-trigger {
-    display: none;
-  }
-
-  .menu-icon {
-    display: none;
-  }
-
-  label[for="nav-trigger"] {
-    display: none;
-  }
-
-  input ~ .trigger {
-    display: flex;
-    align-items: center;
-    gap: 0;
-  }
-
-  input:checked ~ .trigger {
-    display: flex;
-    padding: 0;
-  }
-
-  .page-link {
-    color: $text-color;
-    line-height: $base-line-height;
-    display: inline-block;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-weight: 400;
-    transition: color 0.2s ease;
-    position: relative;
-
-    &:hover {
-      color: $brand-color;
-    }
-
-    // Gaps between nav items
-    &:not(:last-child) {
-      margin-right: 0;
-    }
-    margin-left: 0;
-  }
-
-  // Dropdown styles
-  .dropdown {
-    position: relative;
-    display: inline-block;
-
-    .dropdown-toggle {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-      cursor: pointer;
-
-      .dropdown-arrow {
-        font-size: 0.75em;
-        transition: transform 0.2s ease;
-      }
-
-      &:hover .dropdown-arrow {
-        transform: rotate(180deg);
-      }
-    }
-
-    .dropdown-menu {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: $background-color;
-      border: 1px solid $border-color-01;
-      border-radius: 4px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      min-width: 200px;
-      z-index: 1000;
-      opacity: 0;
-      visibility: hidden;
-      transform: translateY(-10px);
-      transition: all 0.2s ease;
-      padding: 4px 0;
-      text-align: left;
-    }
-
-    &:hover .dropdown-menu {
-      opacity: 1;
-      visibility: visible;
-      transform: translateY(0);
-    }
-
-    .dropdown-item {
-      display: block;
-      padding: 4px 8px;
-      color: $text-color;
-      text-decoration: none;
-      font-weight: 400;
-      transition: background-color 0.2s ease;
-      text-align: left;
-      margin: 0;
-
-      &:hover {
-        background-color: $border-color-01;
-        color: $brand-color;
-      }
-    }
-  }
-
-  @media screen and (max-width: #{$on-medium - 1px}) {
-    position: absolute;
-    top: 9px;
-    right: $spacing-unit / 2;
-    background-color: $background-color;
-    border: 1px solid $border-color-01;
-    border-radius: 5px;
-    text-align: right;
-
-    .nav-trigger {
-      display: none;
-    }
-
-    .menu-icon {
-      float: right;
-      width: 36px;
-      height: 26px;
-      line-height: 0;
-      padding-top: 10px;
-      text-align: center;
-      display: block;
-
-      > svg path {
-        fill: $border-color-03;
-      }
-    }
-
-    label[for="nav-trigger"] {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 36px;
-      z-index: 2;
-      cursor: pointer;
-    }
-
-    input ~ .trigger {
-      clear: both;
-      display: none;
-      flex-direction: column;
-      align-items: stretch;
-      gap: 0;
-    }
-
-    input:checked ~ .trigger {
-      display: flex;
-      padding-bottom: 5px;
-    }
-
-    .page-link {
-      display: block;
-      padding: 5px 10px;
-      margin-left: 20px;
-
-      &:not(:last-child) {
-        margin-right: 0;
-      }
-    }
-
-    .dropdown {
-      .dropdown-menu {
-        position: static;
-        opacity: 1;
-        visibility: visible;
-        transform: none;
-        box-shadow: none;
-        border: none;
-        border-left: 2px solid $border-color-01;
-        margin-left: 20px;
-        padding: 0;
-      }
-
-      .dropdown-item {
-        padding: 5px 10px;
-        margin-left: 20px;
-      }
-    }
-  }
-}
 
 
 
