--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -201,14 +201,14 @@ pre {
   max-width: calc(#{$content-width} - (#{$spacing-unit}));
   margin-right: auto;
   margin-left: auto;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 50px;
+  padding-left: 50px;
   @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
-    max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
-    padding-right: 5px;
-    padding-left: 5px;
+    max-width: 1000px;
+    padding-right: 50px;
+    padding-left: 50px;
   }
 }
 
