tailwind experimental support

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="bg-black text-white min-h-[60px] flex items-center border-b border-white">
+<header class="bg-gray-900 text-white min-h-[60px] flex items-center border-b border-gray-600">
 
   <div class="max-w-6xl mx-auto px-5 flex items-center justify-between min-h-[60px] w-full">
     <a class="text-3xl ml-25 font-semibold tracking-tight text-white no-underline hover:text-gray-300 transition-colors duration-200" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
