--- a/_sass/minima/skins/dark.scss
+++ b/_sass/minima/skins/dark.scss
@@ -1,95 +1,97 @@
 @charset "utf-8";
 
-$brand-color:           #999999 !default;
-$brand-color-light:     lighten($brand-color, 5%) !default;
-$brand-color-dark:      darken($brand-color, 35%) !default;
+// Brand colors - using Tailwind gray-400 (#9ca3af)
+$brand-color:           #9ca3af !default; // tailwind gray-400
+$brand-color-light:     #d1d5db !default; // tailwind gray-300
+$brand-color-dark:      #374151 !default; // tailwind gray-700
 
 $site-title-color:      $brand-color-light !default;
 
-$text-color:            #bbbbbb !default;
-$background-color:      #111827 !default;
-$code-background-color: #212121 !default;
+// Text and background colors
+$text-color:            #d1d5db !default; // tailwind gray-300
+$background-color:      #111827 !default; // tailwind gray-900
+$code-background-color: #1f2937 !default; // tailwind gray-800
 
-$link-base-color:       #79b8ff !default;
+// Link colors - using Tailwind blue-400 (#60a5fa)
+$link-base-color:       #60a5fa !default; // tailwind blue-400
 $link-visited-color:    $link-base-color !default;
 $link-hover-color:      $text-color !default;
 
-$border-color-01:       $brand-color-dark !default;
-$border-color-02:       $brand-color-light !default;
-$border-color-03:       $brand-color !default;
+// Border colors
+$border-color-01:       $brand-color-dark !default; // tailwind gray-700
+$border-color-02:       $brand-color-light !default; // tailwind gray-300
+$border-color-03:       $brand-color !default; // tailwind gray-400
 
-$table-text-color:      $text-color !default;
-$table-zebra-color:     lighten($background-color, 4%) !default;
-$table-header-bg-color: lighten($background-color, 10%) !default;
-$table-header-border:   lighten($background-color, 21%) !default;
-$table-border-color:    $border-color-01 !default;
+// Table colors
+$table-text-color:      $text-color !default; // tailwind gray-300
+$table-zebra-color:     #1f2937 !default; // tailwind gray-800
+$table-header-bg-color: #374151 !default; // tailwind gray-700
+$table-header-border:   #6b7280 !default; // tailwind gray-500
+$table-border-color:    $border-color-01 !default; // tailwind gray-700
 
 
-// Syntax highlighting styles should be adjusted appropriately for every "skin"
+// Syntax highlighting styles using Tailwind colors
 // List of tokens: https://github.com/rouge-ruby/rouge/wiki/List-of-tokens
-// Some colors come from Material Theme Darker:
-// https://github.com/material-theme/vsc-material-theme/blob/master/scripts/generator/settings/specific/darker-hc.ts
-// https://github.com/material-theme/vsc-material-theme/blob/master/scripts/generator/color-set.ts
 // ----------------------------------------------------------------------------
 
 .highlight {
-  .c     { color: #545454; font-style: italic } // Comment
-  .err   { color: #f07178; background-color: #e3d2d2 } // Error
-  .k     { color: #89DDFF; font-weight: bold } // Keyword
+  .c     { color: #6b7280; font-style: italic } // Comment - tailwind gray-500
+  .err   { color: #ef4444; background-color: #fef2f2 } // Error - tailwind red-500, red-50
+  .k     { color: #3b82f6; font-weight: bold } // Keyword - tailwind blue-500
   .o     { font-weight: bold } // Operator
-  .cm    { color: #545454; font-style: italic } // Comment.Multiline
-  .cp    { color: #545454; font-weight: bold } // Comment.Preproc
-  .c1    { color: #545454; font-style: italic } // Comment.Single
-  .cs    { color: #545454; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+  .cm    { color: #6b7280; font-style: italic } // Comment.Multiline - tailwind gray-500
+  .cp    { color: #6b7280; font-weight: bold } // Comment.Preproc - tailwind gray-500
+  .c1    { color: #6b7280; font-style: italic } // Comment.Single - tailwind gray-500
+  .cs    { color: #6b7280; font-weight: bold; font-style: italic } // Comment.Special - tailwind gray-500
+  .gd    { color: #000; background-color: #fef2f2 } // Generic.Deleted - tailwind red-50
+  .gd .x { color: #000; background-color: #fee2e2 } // Generic.Deleted.Specific - tailwind red-100
   .ge    { font-style: italic } // Generic.Emph
-  .gr    { color: #f07178 } // Generic.Error
-  .gh    { color: #999 } // Generic.Heading
-  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
+  .gr    { color: #ef4444 } // Generic.Error - tailwind red-500
+  .gh    { color: #9ca3af } // Generic.Heading - tailwind gray-400
+  .gi    { color: #000; background-color: #f0fdf4 } // Generic.Inserted - tailwind green-50
+  .gi .x { color: #000; background-color: #dcfce7 } // Generic.Inserted.Specific - tailwind green-100
+  .go    { color: #6b7280 } // Generic.Output - tailwind gray-500
+  .gp    { color: #6b7280 } // Generic.Prompt - tailwind gray-500
   .gs    { font-weight: bold } // Generic.Strong
-  .gu    { color: #aaa } // Generic.Subheading
-  .gt    { color: #f07178 } // Generic.Traceback
+  .gu    { color: #9ca3af } // Generic.Subheading - tailwind gray-400
+  .gt    { color: #ef4444 } // Generic.Traceback - tailwind red-500
   .kc    { font-weight: bold } // Keyword.Constant
   .kd    { font-weight: bold } // Keyword.Declaration
   .kp    { font-weight: bold } // Keyword.Pseudo
   .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #FFCB6B; font-weight: bold } // Keyword.Type
-  .m     { color: #F78C6C } // Literal.Number
-  .s     { color: #C3E88D } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #EEFFFF } // Name.Builtin
-  .nc    { color: #FFCB6B; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
-  .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #82AAFF; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #FFCB6B } // Name.Tag
-  .nv    { color: #EEFFFF } // Name.Variable
+  .kt    { color: #f59e0b; font-weight: bold } // Keyword.Type - tailwind amber-500
+  .m     { color: #f97316 } // Literal.Number - tailwind orange-500
+  .s     { color: #10b981 } // Literal.String - tailwind emerald-500
+  .na    { color: #06b6d4 } // Name.Attribute - tailwind cyan-500
+  .nb    { color: #f8fafc } // Name.Builtin - tailwind slate-50
+  .nc    { color: #f59e0b; font-weight: bold } // Name.Class - tailwind amber-500
+  .no    { color: #06b6d4 } // Name.Constant - tailwind cyan-500
+  .ni    { color: #8b5cf6 } // Name.Entity - tailwind violet-500
+  .ne    { color: #dc2626; font-weight: bold } // Name.Exception - tailwind red-600
+  .nf    { color: #3b82f6; font-weight: bold } // Name.Function - tailwind blue-500
+  .nn    { color: #6b7280 } // Name.Namespace - tailwind gray-500
+  .nt    { color: #f59e0b } // Name.Tag - tailwind amber-500
+  .nv    { color: #f8fafc } // Name.Variable - tailwind slate-50
   .ow    { font-weight: bold } // Operator.Word
-  .w     { color: #EEFFFF } // Text.Whitespace
-  .mf    { color: #F78C6C } // Literal.Number.Float
-  .mh    { color: #F78C6C } // Literal.Number.Hex
-  .mi    { color: #F78C6C } // Literal.Number.Integer
-  .mo    { color: #F78C6C } // Literal.Number.Oct
-  .sb    { color: #C3E88D } // Literal.String.Backtick
-  .sc    { color: #C3E88D } // Literal.String.Char
-  .sd    { color: #C3E88D } // Literal.String.Doc
-  .s2    { color: #C3E88D } // Literal.String.Double
-  .se    { color: #EEFFFF } // Literal.String.Escape
-  .sh    { color: #C3E88D } // Literal.String.Heredoc
-  .si    { color: #C3E88D } // Literal.String.Interpol
-  .sx    { color: #C3E88D } // Literal.String.Other
-  .sr    { color: #C3E88D } // Literal.String.Regex
-  .s1    { color: #C3E88D } // Literal.String.Single
-  .ss    { color: #C3E88D } // Literal.String.Symbol
-  .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #FFCB6B } // Name.Variable.Class
-  .vg    { color: #EEFFFF } // Name.Variable.Global
-  .vi    { color: #EEFFFF } // Name.Variable.Instance
-  .il    { color: #F78C6C } // Literal.Number.Integer.Long
+  .w     { color: #f8fafc } // Text.Whitespace - tailwind slate-50
+  .mf    { color: #f97316 } // Literal.Number.Float - tailwind orange-500
+  .mh    { color: #f97316 } // Literal.Number.Hex - tailwind orange-500
+  .mi    { color: #f97316 } // Literal.Number.Integer - tailwind orange-500
+  .mo    { color: #f97316 } // Literal.Number.Oct - tailwind orange-500
+  .sb    { color: #10b981 } // Literal.String.Backtick - tailwind emerald-500
+  .sc    { color: #10b981 } // Literal.String.Char - tailwind emerald-500
+  .sd    { color: #10b981 } // Literal.String.Doc - tailwind emerald-500
+  .s2    { color: #10b981 } // Literal.String.Double - tailwind emerald-500
+  .se    { color: #f8fafc } // Literal.String.Escape - tailwind slate-50
+  .sh    { color: #10b981 } // Literal.String.Heredoc - tailwind emerald-500
+  .si    { color: #10b981 } // Literal.String.Interpol - tailwind emerald-500
+  .sx    { color: #10b981 } // Literal.String.Other - tailwind emerald-500
+  .sr    { color: #10b981 } // Literal.String.Regex - tailwind emerald-500
+  .s1    { color: #10b981 } // Literal.String.Single - tailwind emerald-500
+  .ss    { color: #10b981 } // Literal.String.Symbol - tailwind emerald-500
+  .bp    { color: #9ca3af } // Name.Builtin.Pseudo - tailwind gray-400
+  .vc    { color: #f59e0b } // Name.Variable.Class - tailwind amber-500
+  .vg    { color: #f8fafc } // Name.Variable.Global - tailwind slate-50
+  .vi    { color: #f8fafc } // Name.Variable.Instance - tailwind slate-50
+  .il    { color: #f97316 } // Literal.Number.Integer.Long - tailwind orange-500
 }
