--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,38 +1,42 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="bg-white dark:bg-gray-800 rounded-lg border border-gray-200 dark:border-gray-700 p-8 shadow-sm h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
+  <header class="mb-8 border-b border-gray-200 dark:border-gray-700 pb-6">
+    <h1 class="text-3xl md:text-4xl font-bold text-gray-900 dark:text-white mb-4 p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <div class="flex flex-wrap items-center gap-4 text-sm text-gray-600 dark:text-gray-400">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {{ page.date | date: date_format }}
+        📅 {{ page.date | date: date_format }}
       </time>
       {%- if page.modified_date -%}
-        ~ 
+        <span>•</span>
         {%- assign mdate = page.modified_date | date_to_xmlschema -%}
         <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-          {{ mdate | date: date_format }}
+          🔄 Updated {{ mdate | date: date_format }}
         </time>
       {%- endif -%}
       {%- if page.author -%}
-        • {% for author in page.author %}
+        <span>•</span>
+        <span>✍️ {% for author in page.author %}
           <span itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
-        {% endfor %}
-      {%- endif -%}</p>
-      {% include mathjax.html %}
+        {% endfor %}</span>
+      {%- endif -%}
+    </div>
+    {% include mathjax.html %}
   </header>
 
-  <div class="post-content e-content" itemprop="articleBody">
+  <div class="prose prose-lg dark:prose-invert max-w-none e-content" itemprop="articleBody">
     {{ content }}
   </div>
 
   {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
+    <div class="mt-12 pt-8 border-t border-gray-200 dark:border-gray-700">
+      {%- include disqus_comments.html -%}
+    </div>
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
